[gd_scene load_steps=6 format=3 uid="uid://cuytg4xm3oxvi"]

[ext_resource type="Texture2D" uid="uid://lp3x6008iogl" path="res://assets/entities/player.png" id="1_lm2ls"]
[ext_resource type="Script" path="res://game/entities/player/player.gd" id="1_u2w40"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_e1pbj"]
size = Vector2(25, 25)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ol77a"]
size = Vector2(24, 28)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_ox8ht"]
size = Vector2(90, 720)

[node name="Player" type="CharacterBody2D"]
collision_mask = 3
script = ExtResource("1_u2w40")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("1_lm2ls")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_e1pbj")

[node name="Camera2D" type="Camera2D" parent="."]
limit_left = 0
limit_right = 270
limit_bottom = 480
limit_smoothed = true
position_smoothing_enabled = true
position_smoothing_speed = 7.0

[node name="PlatformSpawner" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlatformSpawner"]
shape = SubResource("RectangleShape2D_ol77a")

[node name="Buttons" type="CanvasLayer" parent="."]

[node name="LeftButton" type="TouchScreenButton" parent="Buttons"]
position = Vector2(45, 240)
shape = SubResource("RectangleShape2D_ox8ht")

[node name="MiddleButton" type="TouchScreenButton" parent="Buttons"]
position = Vector2(135, 240)
shape = SubResource("RectangleShape2D_ox8ht")

[node name="RightButton" type="TouchScreenButton" parent="Buttons"]
position = Vector2(225, 240)
shape = SubResource("RectangleShape2D_ox8ht")

[connection signal="pressed" from="Buttons/LeftButton" to="." method="_on_left_button_pressed"]
[connection signal="pressed" from="Buttons/MiddleButton" to="." method="_on_middle_button_pressed"]
[connection signal="pressed" from="Buttons/RightButton" to="." method="_on_right_button_pressed"]
